Starting card model